Fixed Dashboard layout issue. Fixed bundler&minification issue. Dashboard landing page is ready to be completed.

--- a/SSImplementation/wwwroot/css/site.css
+++ b/SSImplementation/wwwroot/css/site.css
@@ -265,11 +265,6 @@ textarea {
 
 }
 
-{
-    padding-left: 30px;
-    padding-right: 30px;
-}
-
 #DashNav {
     background-color: #ffffff;
     padding:1em;
@@ -288,7 +283,13 @@ textarea {
 }
 
 #DashboardProfilePicture {
+    height:100%;
+    width:100%;
+}
 
+.panel-modest{
+    display:inline-block;
+    width:150px;
 }
 
 
@@ -871,3 +872,28 @@ a.nivo-prevNav {
         text-decoration: underline;
     }
 
+/**Dashboard elements**/
+
+/* Set height of the grid so .sidenav can be 100% (adjust if needed) */
+.row.content {
+    height: 1500px
+}
+
+/* Set gray background color and 100% height */
+.sidenav {
+    
+}
+
+/* Set black background color, white text and some padding */
+
+/* On small screens, set height to 'auto' for sidenav and grid */
+@media screen and (max-width: 767px) {
+    .sidenav {
+        height: auto;
+        padding: 15px;
+    }
+
+    .row.content {
+        height: auto;
+    }
+}
